shesmu-server/src/test/resources/bad/missing-action.shesmu
Input gsi_std;

Run nothing
  Group files = path By accession, donor
  With {
    memory = 4Gi,
    input = files
  }
